; ModuleID = '/home/carl/AnghaBench/kphp-kdb/copyfast/extr_copyfast-server.c_rpc_send_join_ack.c'
source_filename = "/home/carl/AnghaBench/kphp-kdb/copyfast/extr_copyfast-server.c_rpc_send_join_ack.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.connection = type { i32 }
%struct.rpc_join_ack = type { i64 }

@verbosity = common dso_local global i32 0, align 4
@stderr = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [19 x i8] c"rpc_send_join_ack\0A\00", align 1
@Q = common dso_local global i64 0, align 8
@RPC_TYPE_JOIN_ACK = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @rpc_send_join_ack(%struct.connection* %0, i64 %1) #0 {
  %3 = alloca %struct.connection*, align 8
  %4 = alloca i64, align 8
  %5 = alloca %struct.rpc_join_ack*, align 8
  store %struct.connection* %0, %struct.connection** %3, align 8
  store i64 %1, i64* %4, align 8
  %6 = load i32, i32* @verbosity, align 4
  %7 = icmp sge i32 %6, 2
  br i1 %7, label %8, label %11

8:                                                ; preds = %2
  %9 = load i32, i32* @stderr, align 4
  %10 = call i32 @fprintf(i32 %9, i8* getelementptr inbounds ([19 x i8], [19 x i8]* @.str, i64 0, i64 0))
  br label %11

11:                                               ; preds = %8, %2
  %12 = load i64, i64* @Q, align 8
  %13 = inttoptr i64 %12 to %struct.rpc_join_ack*
  store %struct.rpc_join_ack* %13, %struct.rpc_join_ack** %5, align 8
  %14 = load %struct.rpc_join_ack*, %struct.rpc_join_ack** %5, align 8
  %15 = load %struct.connection*, %struct.connection** %3, align 8
  %16 = load i32, i32* @RPC_TYPE_JOIN_ACK, align 4
  %17 = call i32 @rpc_create_query(%struct.rpc_join_ack* %14, i32 8, %struct.connection* %15, i32 %16)
  %18 = load i64, i64* %4, align 8
  %19 = load %struct.rpc_join_ack*, %struct.rpc_join_ack** %5, align 8
  %20 = getelementptr inbounds %struct.rpc_join_ack, %struct.rpc_join_ack* %19, i32 0, i32 0
  store i64 %18, i64* %20, align 8
  %21 = load %struct.rpc_join_ack*, %struct.rpc_join_ack** %5, align 8
  %22 = load %struct.connection*, %struct.connection** %3, align 8
  %23 = call i32 @rpc_send_query(%struct.rpc_join_ack* %21, %struct.connection* %22)
  ret i32 %23
}

declare dso_local i32 @fprintf(i32, i8*) #1

declare dso_local i32 @rpc_create_query(%struct.rpc_join_ack*, i32, %struct.connection*, i32) #1

declare dso_local i32 @rpc_send_query(%struct.rpc_join_ack*, %struct.connection*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
